--- a/cmakelists/CMakeLists.txt
+++ b/cmakelists/CMakeLists.txt
@@ -118,22 +118,56 @@ define_property(TARGET PROPERTY PLUGIN_OUTPUT_DIR
 
 ################################################################
 # check compiler and set preferences.
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if (CMAKE_COMPILER_IS_GNUCXX)
-  execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
-  if (GCC_VERSION VERSION_GREATER 5.1 OR GCC_VERSION VERSION_EQUAL 5.1)
-    message(STATUS "GNU C++ 5.1 or later detected. It uses C++11 New ABI.")
-    set(GNUCXX_NEW_ABI true)
-  endif ()
-endif ()
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wno-unused-command-line-argument)
 endif ()
-if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-endif ()
+
+if(CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
+    if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.2"))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+    endif()
+    if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.1"))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+    endif()
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.1" AND (NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.3")))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
+    endif()
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.3")
+        message(FATAL_ERROR "Building with a Apple clang version less than 4.3 is not supported.")
+    endif()
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND NOT CMAKE_CXX_SIMULATE_ID MATCHES "MSVC") # clang, but not clang-cl.
+    # non-Apple clangs uses different versioning.
+    if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5.0.0"))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+    endif()
+    if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "3.5.0"))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+    endif()
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "3.5.0" AND (NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "3.2")))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
+    endif()
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "3.2")
+        message(FATAL_ERROR "Building with a clang version less than 3.2 is not supported.")
+    endif()
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+    if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "7.0.0"))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+    endif()
+    if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5.2.0"))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+    endif()
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5.2.0" AND (NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.8.1")))
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
+    endif()
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.8.1")
+        message(FATAL_ERROR "Building with a gcc version less than 4.8.1 is not supported.")
+    endif()
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest /W4 /permissive-")
+endif()
 
 if (MSVC)
   set(CMAKE_DEBUG_POSTFIX "d")
