--- a/cmakelists/autotest/CMakeLists.txt
+++ b/cmakelists/autotest/CMakeLists.txt
@@ -71,4 +71,39 @@ if (Python_FOUND)
         add_custom_target(autotest COMMAND ${CMAKE_COMMAND} -E env ${PYTHON_RUN_ENV} ${Python_EXECUTABLE} -m pytest -c ${CMAKE_CURRENT_BINARY_DIR}/pytest.ini
                           WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/autotest)
     endif ()
+
+    file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pytest_runner.cpp "
+#include <cstdlib>
+#include <filesystem>
+#include <string>
+#include <Python.h>
+int main(int argc, char **argv) {
+    std::string args;
+    if ( argc > 1) {
+        args.append(\"[\");
+        for (int i = 1; i < argc; i++) {
+            if (i > 2)
+                args.append(\",\");
+            args.append(\"\\\"\");
+            args.append(argv[i]);
+            args.append(\"\\\"\");
+        }
+        args.append(\"]\");
+    }
+    std::string pycode = \"import pytest\\npytest.main(\" + args + \")\\n\";
+    wchar_t * program_name = Py_DecodeLocale(argv[0], NULL);
+    Py_SetProgramName(program_name);
+    Py_Initialize();
+    std::string prepend = std::string(\"../gdal/swig/python\") + ':';
+    std::wstring new_python_path = std::wstring(prepend.begin(), prepend.end()) + std::wstring(Py_GetPath());
+    Py_SetPath(new_python_path.c_str());
+    PyRun_SimpleString(&*pycode.begin());
+    Py_Finalize();
+    return 0;
+}")
+    add_executable(pytest_runner ${CMAKE_CURRENT_BINARY_DIR}/pytest_runner.cpp)
+    set_property(TARGET pytest_runner PROPERTY CXX_STANDARD 17)
+    target_link_libraries(pytest_runner PUBLIC gdal)
+    target_include_directories(pytest_runner PRIVATE ${Python_INCLUDE_DIRS})
+    target_link_libraries(pytest_runner PRIVATE ${Python_LIBRARIES})
 endif ()
