--- a/cmakelists/CMakeLists.txt
+++ b/cmakelists/CMakeLists.txt
@@ -70,8 +70,11 @@ endif ()
 if (POLICY CMP0075)
   cmake_policy(SET CMP0075 NEW)
 endif ()
+if (POLICY CMP0076)
+  cmake_policy(SET CMP0076 NEW)
+endif ()
 if (POLICY CMP0079)
-  cmake_policy(SET CMP0079 OLD)
+  cmake_policy(SET CMP0079 NEW)
 endif ()
 # cmake version 3.14 or later
 if (POLICY CMP0090)
