--- a/cmakelists/gdal/alg/CMakeLists.txt
+++ b/cmakelists/gdal/alg/CMakeLists.txt
@@ -41,6 +41,10 @@ target_include_directories(alg PRIVATE
 						   $<TARGET_PROPERTY:gdal_vrt,SOURCE_DIR>)
 set_property(TARGET alg PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_sources(gdal PRIVATE $<TARGET_OBJECTS:alg>)
+if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.16)
+	set_property(SOURCE gdaldither.cpp gdalmediancut.cpp
+							 PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
+endif()
 
 if(HAVE_GEOS)
     target_include_directories(alg PRIVATE ${GEOS_INCLUDE_DIRS}
