--- a/cmakelists/gdal/frmts/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/CMakeLists.txt
@@ -97,7 +97,7 @@ set_package_properties(TIFF PROPERTIES PURPOSE "gdal_CALS: CALS type 1 driver")
 gdal_format(safe "SAFE -- Sentinel-1 SAFE XML Product")
 gdal_format(sentinel2 "Driver for Sentinel-2 Level-1B, Level-1C and Level-2A products.")
 gdal_format(prf "PHOTOMOD Raster File")
-gdal_format(mrf "Meta raster format")
+#gdal_format(mrf "Meta raster format")
 gdal_format(wcs "OGC Web Coverage Service")
 gdal_format(wmts "OGC Web Map Tile Service")
 gdal_format(grib "WMO General Regularly-distributed Information in Binary form")
