--- a/cmakelists/gdal/frmts/gif/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/gif/CMakeLists.txt
@@ -10,3 +10,8 @@ if(GDAL_USE_GIFLIB_INTERNAL)
 else()
     gdal_target_link_libraries(TARGET gdal_GIF LIBRARIES GIF::GIF)
 endif()
+if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.16)
+    set_property(SOURCE
+                 gifdataset.cpp gifabstractdataset.cpp
+                 PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
+endif()
