--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,7 +23,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: 'gdal/cmake4gdal'
-    - run: |
+    - name: Install dependency
+      run: |
         sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
         sudo apt-get update
         sudo apt-get install -y -q bison libjpeg-dev libgif-dev liblzma-dev libgeos-dev git \
@@ -39,8 +40,12 @@ jobs:
         python3 -m pip install -r $GITHUB_WORKSPACE/gdal/autotest/requirements.txt
         python3 $GITHUB_WORKSPACE/gdal/cmake4gdal/deploy.py
         mkdir -p $GITHUB_WORKSPACE/build
+    - name: Configure
+      run: |
         cd $GITHUB_WORKSPACE/build
         cmake -C ${CONFIGURATION} ${CMAKE_OPTIONS} ${GITHUB_WORKSPACE}/gdal
+    - name: Build
+      run: |
         cmake --build $GITHUB_WORKSPACE/build
 
   build-windows:
@@ -66,7 +71,8 @@ jobs:
         activate-environment: myEnvironment
         python-version: 3.7
         channels: conda-forge
-    - shell: bash -l {0}
+    - name: Install proj by miniconda
+      shell: bash -l {0}
       run: |
         conda install --yes --quiet --name myEnvironment -c conda-forge python=3.7 proj swig numpy pytest
         python -m pip install -U pip wheel setuptools numpy
@@ -79,8 +85,12 @@ jobs:
         rm ${SDK}/include/ogr*.h
         python $GITHUB_WORKSPACE/gdal/cmake4gdal/deploy.py
         mkdir -p $GITHUB_WORKSPACE/build
+    - name: Configure
+      run: |
         cd $GITHUB_WORKSPACE/build
         cmake -A ${architecture} -G "${generator}" -C ${CONFIGURATION} ${CMAKE_OPTIONS} $GITHUB_WORKSPACE/gdal
+    - name: Build
+      run: |
         cmake --build $GITHUB_WORKSPACE/build --config Release
 
   build-mac:
@@ -98,13 +108,18 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: 'gdal/cmake4gdal'
-    - run: |
+    - name: Install dependency
+      run: |
         brew update
         brew outdated
-        brew install freexl libxml2 libspatialite geos proj libpng openjpeg giflib jpeg szip postgresql postgis poppler doxygen
+        brew install freexl libxml2 libspatialite geos proj libpng openjpeg giflib jpeg szip postgis poppler doxygen
         brew install ccache swig
         python $GITHUB_WORKSPACE/gdal/cmake4gdal/deploy.py
         mkdir -p $GITHUB_WORKSPACE/build
+    - name: Configure
+      run: |
         cd $GITHUB_WORKSPACE/build
         cmake -C ${CONFIGURATION} ${CMAKE_OPTIONS} $GITHUB_WORKSPACE/gdal
+    - name: Build
+      run: |
         cmake --build $GITHUB_WORKSPACE/build
