--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,6 +23,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: 'gdal/cmake4gdal'
+    - run: |
+        cmake --version
     - name: Install dependency
       run: |
         sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
@@ -43,7 +45,7 @@ jobs:
     - name: Configure
       run: |
         cd $GITHUB_WORKSPACE/build
-        cmake -C ${CONFIGURATION} ${CMAKE_OPTIONS} ${GITHUB_WORKSPACE}/gdal
+        cmake -C ${CONFIGURATIONS} ${CMAKE_OPTIONS} ${GITHUB_WORKSPACE}/gdal
     - name: Build
       run: |
         cmake --build $GITHUB_WORKSPACE/build
@@ -71,6 +73,8 @@ jobs:
         activate-environment: myEnvironment
         python-version: 3.7
         channels: conda-forge
+    - run: |
+        cmake --version
     - name: Install proj by miniconda
       shell: bash -l {0}
       run: |
@@ -88,7 +92,7 @@ jobs:
     - name: Configure
       run: |
         cd $GITHUB_WORKSPACE/build
-        cmake -A ${architecture} -G "${generator}" -C ${CONFIGURATION} ${CMAKE_OPTIONS} $GITHUB_WORKSPACE/gdal
+        cmake -A ${architecture} -G "${generator}" -C ${CONFIGURATIONS} ${CMAKE_OPTIONS} $GITHUB_WORKSPACE/gdal
     - name: Build
       run: |
         cmake --build $GITHUB_WORKSPACE/build --config Release
@@ -108,6 +112,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: 'gdal/cmake4gdal'
+    - run: |
+        cmake --version
     - name: Install dependency
       run: |
         brew update
@@ -119,7 +125,7 @@ jobs:
     - name: Configure
       run: |
         cd $GITHUB_WORKSPACE/build
-        cmake -C ${CONFIGURATION} ${CMAKE_OPTIONS} $GITHUB_WORKSPACE/gdal
+        cmake -C ${CONFIGURATIONS} ${CMAKE_OPTIONS} $GITHUB_WORKSPACE/gdal
     - name: Build
       run: |
         cmake --build $GITHUB_WORKSPACE/build
