--- a/cmakelists/gdal/ogr/ogrsf_frmts/bna/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/bna/CMakeLists.txt
@@ -1,3 +1,2 @@
-add_gdal_driver(TARGET ogr_BNA SOURCES ogr_bna.h ogrbnadatasource.cpp
-        ogrbnadriver.cpp ogrbnalayer.cpp ogrbnaparser.cpp ogrbnaparser.h)
+add_gdal_driver(TARGET ogr_BNA SOURCES ogrbnadatasource.cpp ogrbnadriver.cpp ogrbnalayer.cpp ogrbnaparser.cpp)
 gdal_standard_includes(ogr_BNA)
