--- a/cmakelists/gdal/ogr/ogrsf_frmts/flatgeobuf/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/flatgeobuf/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_gdal_driver(TARGET ogr_FlatGeobuf
-                SOURCES feature_generated.h header_generated.h ogr_flatgeobuf.h
-                ogrflatgeobufdataset.cpp ogrflatgeobuflayer.cpp packedrtree.cpp packedrtree.h)
+                SOURCES ogrflatgeobufdataset.cpp ogrflatgeobuflayer.cpp packedrtree.cpp
+                geometryreader.cpp geometrywriter.cpp)
 gdal_standard_includes(ogr_FlatGeobuf)
+target_include_directories(ogr_FlatGeobuf PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
