--- a/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
@@ -81,6 +81,7 @@ ogr_optional_driver(wasp "WAsP .map format")
 ogr_optional_driver(selafin OSELAFIN)
 ogr_optional_driver(jml JML)
 ogr_optional_driver(vdv "VDV-451/VDV-452/INTREST Data Format")
+ogr_optional_driver(flatgeobuf FlatGeobuf)
 
 ######################################
 #
