--- a/.github/workflows/cmake-lint.yml
+++ b/.github/workflows/cmake-lint.yml
@@ -17,4 +17,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install cmake-format pyyaml
     - name: Check cmakelist
-      run: find cmakelists -name CMakeLists.txt |xargs cmake-lint
+      run: find cmakelists -name CMakeLists.txt |xargs cmake-format --check
