--- a/cmakelists/gdal/frmts/ecw/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/ecw/CMakeLists.txt
@@ -1,11 +1,10 @@
 option(GDAL_ENABLE_ECW_PLUGIN "On to build ECW driver as plugin" ON)
-set(_SOURCES ecwsdk_headers.h gdal_ecw.h ecwdataset.cpp ecwcreatecopy.cpp ecwasyncreader.cpp jp2userbox.cpp)
+set(SOURCE ecwdataset.cpp ecwcreatecopy.cpp ecwasyncreader.cpp jp2userbox.cpp)
 if (GDAL_ENABLE_ECW_PLUGIN)
-  add_gdal_driver(TARGET gdal_ECW_JP2ECW SOURCES ${_SOURCES} PLUGIN)
+  add_gdal_driver(TARGET gdal_ECW_JP2ECW SOURCES ${SOURCE} PLUGIN)
 else ()
-  add_gdal_driver(TARGET gdal_ECW_JP2ECW SOURCES ${_SOURCES} DEF FRMT_ecw)
+  add_gdal_driver(TARGET gdal_ECW_JP2ECW SOURCES ${SOURCE} DEF FRMT_ecw)
 endif ()
-unset(_SOURCES)
 gdal_standard_includes(gdal_ECW_JP2ECW)
 target_compile_definitions(gdal_ECW_JP2ECW PRIVATE -DFRMT_ecw -DDO_NOT_USE_DEBUG_BOOL)
 gdal_target_link_libraries(
