--- a/cmakelists/gdal/ogr/ogrsf_frmts/dwg/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/dwg/CMakeLists.txt
@@ -1,10 +1,5 @@
 option(OGR_ENABLE_DWG_PLUGIN "Enable plugin for dwg driver" ON)
-set(_SOURCES
-    dgnv8_headers.h
-    dwg_headers.h
-    ogr_dgnv8.h
-    ogr_dwg.h
-    createdgnv8testfile_headers.h
+set(SOURCE
     ogrdgnv8datasource.cpp
     ogrdgnv8driver.cpp
     ogrdwg_blockmap.cpp
@@ -13,11 +8,10 @@ set(_SOURCES
     ogrdwgdatasource.cpp
     ogrdwgdriver.cpp)
 if (OGR_ENABLE_DWG_PLUGIN)
-  add_gdal_driver(TARGET ogr_DWG SOURCES ${_SOURCES} PLUGIN)
+  add_gdal_driver(TARGET ogr_DWG SOURCES ${SOURCE} PLUGIN)
 else ()
-  add_gdal_driver(TARGET ogr_DWG SOURCES ${_SOURCES})
+  add_gdal_driver(TARGET ogr_DWG SOURCES ${SOURCE})
 endif ()
-unset(_SOURCES)
 gdal_standard_includes(ogr_DWG)
 target_compile_definitions(ogr_DWG PRIVATE -DDO_NOT_USE_DEBUG_BOOL)
 target_include_directories(ogr_DWG PRIVATE $<TARGET_PROPERTY:ogr_DXF,SOURCE_DIR> ${TEIGHA_INCLUDE_DIR})
