--- a/cmakelists/gdal/ogr/ogrsf_frmts/oci/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/oci/CMakeLists.txt
@@ -1,8 +1,7 @@
 option(OGR_ENABLE_OCI_PLUGIN "Enable plugin build for Oracle OCI" ON)
-set(_SOURCES
+set(SOURCE
     oci_utils.cpp
     ocitest.cpp
-    ogr_oci.h
     ogrocidatasource.cpp
     ogrocidriver.cpp
     ogrocilayer.cpp
@@ -15,11 +14,10 @@ set(_SOURCES
     ogrocitablelayer.cpp
     ogrociwritablelayer.cpp)
 if (OGR_ENABLE_OCI_PLUGIN)
-  add_gdal_driver(TARGET ogr_OCI SOURCES ${_SOURCES} PLUGIN)
+  add_gdal_driver(TARGET ogr_OCI SOURCES ${SOURCE} PLUGIN)
 else ()
-  add_gdal_driver(TARGET ogr_OCI SOURCES ${_SOURCES})
+  add_gdal_driver(TARGET ogr_OCI SOURCES ${SOURCE})
 endif ()
-unset(_SOURCES)
 gdal_standard_includes(ogr_OCI)
 target_include_directories(ogr_OCI PRIVATE ${OCI_INCLUDE_DIRS})
 gdal_target_link_libraries(TARGET ogr_OCI LIBRARIES ${OCI_LIBRARIES})
