--- a/cmakelists/gdal/ogr/ogrsf_frmts/mongodb/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/mongodb/CMakeLists.txt
@@ -1,7 +1,6 @@
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(MONGO libmongo-client)
-
-add_gdal_driver(TARGET ogr_MongoDB SOURCES mongocxx_headers.h ogrmongodbdriver.cpp)
+add_gdal_driver(TARGET ogr_MongoDB SOURCES ogrmongodbdriver.cpp)
 gdal_standard_includes(ogr_MongoDB)
 target_include_directories(ogr_MongoDB PRIVATE $<TARGET_PROPERTY:ogrsf_generic,SOURCE_DIR> ${MONGO_INCLUDE_DIRS}
                                                ${Boost_INCLUDE_DIRS})
